--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to Global Standard Services (GSS), established in 2018, combining innovation and reliability to offer comprehensive IT solutions with integrated hardware and software services"
     />
-    <img
-      alt="Logo"
-      src="https://appproject.dhiwise.com/dhiwise-logo.png?c=6ku-cccb4f-R38&v=1.0.1"
-      style="width: 0px; height: 0px"
-    />
+   
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
