--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>GSS Enterprises</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Welcome to Global Standard Services (GSS), established in 2018, combining innovation and reliability to offer comprehensive IT solutions with integrated hardware and software services"
-    />
-   
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  </head>
+  <<head>
+  <meta charset="utf-8" />
+  <title>Global Standard Services (GSS) Enterprises - Comprehensive IT Solutions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Welcome to Global Standard Services (GSS), established in 2018. We combine innovation and reliability to offer comprehensive IT solutions with integrated hardware and software services." />
+  <meta name="keywords" content="GSS,GSS Enterprises, gss enterprises, Gss Enterprises,  Global Standard Services, IT solutions, hardware services, software services, IT innovation, reliable IT solutions, comprehensive IT services" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="stylesheet" href="styles.css" />
+  <meta property="og:title" content="Global Standard Services (GSS) Enterprises" />
+  <meta property="og:description" content="Explore GSS Enterprises for innovative and reliable IT solutions, combining hardware and software services to meet all your needs." />
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+  <meta property="og:url" content="https://www.yourwebsite.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Global Standard Services (GSS) Enterprises" />
+  <meta name="twitter:description" content="Discover comprehensive IT solutions with GSS Enterprises, offering integrated hardware and software services." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/twitter-image.jpg" />
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="dhiwise-code" id="root"></div>
