--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <<head>
+  <head>
   <meta charset="utf-8" />
   <title>Global Standard Services (GSS) Enterprises - Comprehensive IT Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
