--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Global Standard Services (GSS) Enterprises - Comprehensive IT Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="zmf40ukwWjxLJt1DiiM2XvOhoMPdbZ92W4tNkLuwlkg" />
   <meta name="description" content="Welcome to Global Standard Services (GSS), established in 2018. We combine innovation and reliability to offer comprehensive IT solutions with integrated hardware and software services." />
   <meta name="keywords" content="GSS,GSS Enterprises, gss enterprises, Gss Enterprises,  Global Standard Services, IT solutions, hardware services, software services, IT innovation, reliable IT solutions, comprehensive IT services" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
